# Test_Scheduling_Proj

./: .gitignore  CMakeLists.txt  CalendarScreen.qml  Main.qml  OutputScreen.qml  PeriodEditorScreen.qml  README.md  c
.github/workflows/: ci.yml
build_integrated_tests/: ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  Continuous.vcxproj.filters  DartConfiguration.tcl  ExamScheduler.sln  Experimental.vcxproj.filters  INSTALL.vcxproj.filters  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  exam_scheduler.vcxproj.filters  exam_scheduler_qmlimportscan.vcxproj.filters
build_integrated_tests/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_integrated_tests/exam_scheduler_autogen/: mocs_compilation_Debug.cpp
build_integrated_tests/tests/: CTestTestfile.cmake  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  cmake_install.cmake  invalid_input_integration_test.vcxproj.filters  no_solution_integration_test.vcxproj.filters  overlap_conflict_integration_test.vcxproj.filters  parser_preprocessor_integration_test.vcxproj.filters  program_course_model_test.vcxproj.filters  scheduler_integration_test.vcxproj.filters
data/: courses.txt  exam_periods.txt  selected_programs.txt
docs/: QA_TEST_PLAN.md  QA_TRACEABILITY_MATRIX.md  design_document.txt  test_plan.txt
exam_scheduler_cpp/: DESIGN.md  README.md  RUN_EXAMPLES.txt
exam_scheduler_cpp/include/: OutputWriter.h  Utils.h
exam_scheduler_cpp/src/: Date.cpp  Scheduler.cpp  main.cpp
exam_scheduler_cpp/test_inputs/: elective_overlap_courses.txt
include/: Parser.h  Scheduler.h
qml/: AppButton.qml  AppTheme.qml  CalendarGrid.qml  CalendarScreen.qml  InputScreen.qml  Main.qml  OutputScreen.qml  PeriodEditorScreen.qml  SettingsScreen.qml
src/: Domain.cpp  OutputWriter.cpp  Preprocessor.cpp  main.cpp
src/application/: MoveValidationService.cpp  MoveValidationService.h  SchedulingSession.cpp  SchedulingSession.h
src/dates/: Date.cpp  Date.h  Utils.h
src/domain/: Course.cpp  Course.h  Date.cpp  Date.h  DateAvailabilityPolicy.cpp  DateAvailabilityPolicy.h  ExamPeriod.cpp  ExamPeriod.h  ScheduleGenerationResult.cpp  ScheduleGenerationResult.h
src/exporter/: DisplayedScheduleExporter.cpp  DisplayedScheduleExporter.h  OutputWriter.cpp  OutputWriter.h
src/gui/: AppController.cpp  AppController.h  CalendarManager.cpp  CalendarManager.h  ProgramCourseModel.cpp  ProgramCourseModel.h  ScheduleOutputManager.cpp  ScheduleOutputManager.h
src/infrastructure/: InputParser.cpp  InputParser.h  OutputWriter.cpp  OutputWriter.h
src/model/: Course.cpp  Course.h  ExamPeriod.cpp  ExamPeriod.h
src/parser/: InputParser.cpp  InputParser.h
src/preprocessing/: Preprocessor.cpp  Preprocessor.h
src/presentation/: AppController.cpp  AppController.h  CalendarManager.cpp  CalendarManager.h  DragAndDropAdapter.cpp  DragAndDropAdapter.h  ProgramCourseModel.cpp  ProgramCourseModel.h  ScheduleOutputManager.cpp  ScheduleOutputManager.h
src/scheduler/: ScheduleGenerator.cpp  ScheduleGenerator.h  SchedulingWorker.cpp
src/scheduling/: AdvancedConflictRules.cpp  AdvancedConflictRules.h  IConflictRule.h  IReadOnlySchedule.h  Preprocessor.cpp  (+12 more)
test_inputs/: elective_overlap_periods.txt
tests/: CMakeLists.txt  CourseParserTest.cpp  ProgramCourseModelTest.cpp  README.md  Tests_Commands
tests/256_test/: courses.txt  periods.txt  selected_programs.txt
tests/common/: ScheduleAssertions.h  TestDataPaths.h  TestFactories.h  TestMacros.h
tests/data/invalid/integration_test/: periods.txt
tests/data/invalid/missing-fields/: courses.txt  expected.md
tests/data/no_solution/impossible-schedule/: courses.txt  expected.md  periods.txt
tests/data/no_solution/no_solution_test/: courses.txt  periods.txt
tests/data/overlap/same-program-conflict/: courses.txt  expected.md
tests/data/valid/simple/: expected.md  periods.txt
tests/gui/: QmlSmokeTest.cpp
tests/integration/: InvalidInputIntegrationTest.cpp  NoSolutionIntegrationTest.cpp  OverlapConflictIntegrationTest.cpp  ParserPreprocessorIntegrationTest.cpp  SchedulerIntegrationTest.cpp
tests/integration/conflicts/: OverlapConflictIntegrationTest.cpp
tests/integration/export_flow/: ExportFlowIntegrationTest.cpp
tests/integration/hard_constraints/: HardConstraintsIntegrationTest.cpp
tests/integration/metrics_sorting/: MetricsSortingIntegrationTest.cpp
tests/integration/no_solution/: NoSolutionIntegrationTest.cpp
tests/integration/parser_preprocessor/: ParserPreprocessorIntegrationTest.cpp
tests/integration/scheduling_pipeline/: SchedulerIntegrationTest.cpp
tests/integration_test/: courses.txt
tests/manual/: MANUAL_QA_CHECKLIST.md
tests/origin_test/: courses.txt
tests/performance/: SchedulerPerformanceSmokeTest.cpp
tests/regression/: Phase3RegressionSmokeTest.cpp
tests/reports/: FINAL_QA_TEST_REPORT.md
tests/stress_tests_high_load/: courses.txt
tests/unit/: CourseModelTest.cpp  DateAndExamPeriodTest.cpp  ProgramCourseModelTest.cpp  ScheduleGenerationResultTest.cpp  SchedulingSessionTest.cpp
tests/unit/application/: SchedulingSessionTest.cpp
tests/unit/domain/: CourseModelTest.cpp  DateAndExamPeriodTest.cpp  DateAvailabilityPolicyTest.cpp  ScheduleGenerationResultTest.cpp
tests/unit/infrastructure/: InputParserEdgeCaseTest.cpp
tests/unit/presentation/: AppControllerTest.cpp  CalendarManagerTest.cpp  ScheduleOutputManagerExportSafetyTest.cpp  ScheduleOutputManagerMoveDateBoundaryTest.cpp  ScheduleOutputManagerMoveHardConstraintsTest.cpp  ScheduleOutputManagerMoveMemoryIntegrityTest.cpp  ScheduleOutputManagerSortingTest.cpp  SettingsWorkflowTest.cpp
tests/unit/scheduling/: AdvancedConflictRulesTest.cpp  MetricsCalculatorTest.cpp  SameGroupConflictRuleTest.cpp  SchedulingServiceAsyncTest.cpp
tests_generated_50/: README.md  manifest.csv  run_all_limited.sh
(+89 files in other folders)
